--- a/compose/local/django/Dockerfile
+++ b/compose/local/django/Dockerfile
@@ -13,7 +13,9 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
   # dependencies for building Python packages
   build-essential \
   # psycopg2 dependencies
-  libpq-dev
+  libpq-dev \
+  # git
+  git
 
 # Requirements are installed here to ensure they will be cached.
 COPY ./requirements .
