remove redundant js lib file

--- a/.gitignore
+++ b/.gitignore
@@ -177,6 +177,7 @@ typings/
 .idea/dictionaries
 
 # Sensitive or high-churn files:
+.idea/**/*
 .idea/**/dataSources/
 .idea/**/dataSources.ids
 .idea/**/dataSources.xml
