--- a/.gitignore
+++ b/.gitignore
@@ -333,3 +333,7 @@ one/media/
 .pytest_cache/
 .ipython/
 /one/templates/metronic/_base-full.html
+/one/static/sass/custom.css.map
+/one/static/sass/project.css.map
+/package-lock.json
+/package.json
