Update Base gulp

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "one",
   "version": "0.1.0",
-  "dependencies": {},
+  "dependencies": {
+
+  },
   "devDependencies": {
     "bootstrap": "^5.1.3",
     "gulp-concat": "^2.6.1",
