--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "name": "one",
   "version": "0.1.0",
   "dependencies": {
-
+    "dropify": "^0.2.2"
   },
   "devDependencies": {
-    "bootstrap": "^5.1.3",
-    "gulp-concat": "^2.6.1",
     "@popperjs/core": "^2.10.2",
     "autoprefixer": "^10.4.0",
+    "bootstrap": "^5.1.3",
     "browser-sync": "^2.27.7",
     "cssnano": "^5.0.11",
     "gulp": "^4.0.2",
+    "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^7.1.0",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^9.0.1",
