--- a/local.yml
+++ b/local.yml
@@ -1,8 +1,8 @@
 version: '3'
 
 volumes:
-  local_postgres_data: {}
-  local_postgres_data_backups: {}
+  one_local_postgres_data: {}
+  one_local_postgres_data_backups: {}
 
 services:
   django: &django
@@ -10,7 +10,8 @@ services:
       context: .
       dockerfile: ./compose/local/django/Dockerfile
     image: one_local_django
-    container_name: django
+    container_name: one_local_django
+    platform: linux/x86_64
     depends_on:
       - postgres
       - redis
@@ -29,16 +30,17 @@ services:
       context: .
       dockerfile: ./compose/production/postgres/Dockerfile
     image: one_production_postgres
-    container_name: postgres
+    container_name: one_local_postgres
     volumes:
-      - local_postgres_data:/var/lib/postgresql/data:Z
-      - local_postgres_data_backups:/backups:z
+      - one_local_postgres_data:/var/lib/postgresql/data:Z
+      - one_local_postgres_data_backups:/backups:z
     env_file:
       - ./.envs/.local/.postgres
 
   docs:
     image: one_local_docs
-    container_name: docs
+    container_name: one_local_docs
+    platform: linux/x86_64
     build:
       context: .
       dockerfile: ./compose/local/docs/Dockerfile
@@ -49,23 +51,23 @@ services:
       - ./config:/app/config:z
       - ./one:/app/one:z
     ports:
-      - "8001:7000"
+      - "9000:9000"
     command: /start-docs
 
   mailhog:
     image: mailhog/mailhog:v1.0.0
-    container_name: mailhog
+    container_name: one_local_mailhog
     ports:
-      - "8002:8025"
+      - "8025:8025"
 
   redis:
     image: redis:6
-    container_name: redis
+    container_name: one_local_redis
 
   celeryworker:
     <<: *django
     image: one_local_celeryworker
-    container_name: celeryworker
+    container_name: one_local_celeryworker
     depends_on:
       - redis
       - postgres
@@ -76,7 +78,7 @@ services:
   celerybeat:
     <<: *django
     image: one_local_celerybeat
-    container_name: celerybeat
+    container_name: one_local_celerybeat
     depends_on:
       - redis
       - postgres
@@ -87,7 +89,25 @@ services:
   flower:
     <<: *django
     image: one_local_flower
-    container_name: flower
+    container_name: one_local_flower
     ports:
-      - "8003:5555"
+      - "5555:5555"
     command: /start-flower
+
+  node:
+    build:
+      context: .
+      dockerfile: ./compose/local/node/Dockerfile
+    image: one_local_node
+    container_name: one_local_node
+    depends_on:
+      - django
+    volumes:
+      - .:/app:z
+      # http://jdlm.info/articles/2016/03/06/lessons-building-node-app-docker.html
+      - /app/node_modules
+    command: npm run dev
+    ports:
+      - "3000:3000"
+      # Expose browsersync UI: https://www.browsersync.io/docs/options/#option-ui
+      - "3001:3001"
