add new jquery libraries

--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "one",
   "version": "0.1.0",
-  "dependencies": {},
+  "dependencies": {
+    "dropify": "^0.2.2",
+    "jquery-mask-plugin": "^1.14.16",
+    "jquery.json-viewer": "^1.4.0"
+  },
   "devDependencies": {
     "bootstrap": "^5.1.3",
     "gulp-concat": "^2.6.1",
