--- a/.env-DEFAULT
+++ b/.env-DEFAULT
@@ -14,6 +14,12 @@ CELERY_BROKER_URL=redis://redis:6379/0
 CELERY_FLOWER_USER=user
 CELERY_FLOWER_PASSWORD=password
 
+# django-webpush
+# ------------------------------------------------------------------------------
+VAPID_PUBLIC_KEY=BEoGD6DG964hJEgzD4swEbhlkAG5qXE34sJ1oUd6yYCzlk06AXOwG6_2C_dy_wzyemi3UwAw74K6IMwCdXJIo50
+VAPID_PRIVATE_KEY=usGrKM89fvTCjC0dYlb5Ra7BMmvVWxeVW9jYVWfDQJo
+VAPID_ADMIN_EMAIL=bin.ngoctu@gmail.com
+
 # PostgreSQL
 # ------------------------------------------------------------------------------
 POSTGRES_HOST=postgres
