Default mailhog for local

--- a/.env-DEFAULT
+++ b/.env-DEFAULT
@@ -2,6 +2,11 @@
 # ------------------------------------------------------------------------------
 USE_DOCKER=no
 IPYTHONDIR=/app/.ipython
+
+# MailHog
+# ------------------------------------------------------------------------------
+EMAIL_HOST=localhost
+
 # Redis
 # ------------------------------------------------------------------------------
 REDIS_URL=redis://redis:6379/0
